<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@drawable/fondorengoku"
    tools:context=".Home_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_component"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombresregis"
            android:textColor="@color/white"/>
<EditText
    android:background="@drawable/edittext_styles"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="35dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellidosregis"
            android:textColor="@color/white"
            />
        <EditText
            android:background="@drawable/edittext_styles"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"/>
        <EditText
            android:background="@drawable/edittext_styles"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefonoregis"
            android:textColor="@color/white"/>
        <EditText
            android:background="@drawable/edittext_styles"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"/>
        <Button

            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"

            android:text="@string/register"/>

    </LinearLayout>


</LinearLayout>