<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@drawable/fondorengoku"
    tools:context=".Home_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_component"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/profile"
    android:gravity="center"
    android:paddingBottom="10dp"
    android:textSize="25sp"
    android:textColor="@color/white"
    android:textStyle="bold"/>

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded_image"
            android:src="@drawable/rounded_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textColor="@color/white"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textColor="@color/white"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textColor="@color/white"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textColor="@color/white"

            />
        <Button
            android:id="@+id/btnGoLogout"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"

            android:text="@string/Logout"/>

    </LinearLayout>


</LinearLayout>